--- a/projeto-glass-html5/specs.html
+++ b/projeto-glass-html5/specs.html
@@ -49,7 +49,13 @@
     </p>
 
     <section id="conteudo">
-        <img src="_imagens/glass-esquema-marcado.jpg" alt="">
+        <img src="_imagens/glass-esquema-marcado.jpg" alt="" usemap="#meumapa">
+        <map name="meumapa">
+            <area shape="rect" coords="179,202, 270,260" href="google-glass.html#tela" target="janela" alt="">
+            <area shape="circle" coords="158,243, 12" href="google-glass.html#camera" target="janela" alt="">
+            <area shape="circle" coords="76,52, 11" href="google-glass.html#gadgets" target="janela" alt="">
+            <area shape="poly" coords="28,143, 82,216, 84,249, 27,169" href="google-glass.html#sensores" target="janela" alt="">
+        </map>
         <iframe src="google-glass.html" name="janela" id="frame-spec"></iframe>
     </section>
 
