--- a/projeto-glass-html5/fale-conosco.html
+++ b/projeto-glass-html5/fale-conosco.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tudo sobre Google Glass</title>
     <link rel="stylesheet" href="_css/estilo.css">
+    <link rel="stylesheet" href="_css/form.css">
+    <script src="_javascript/funcoes.js"></script>
+    <script>
+        function calc_total() {
+            var qtd = parseInt(document.getElementById('cQtd').value);
+            tot = qtd * 1500;
+            document.getElementById('cTot').value = tot;
+        }
+    </script>
 </head>
 <body>
     <div id="interface">
@@ -41,7 +50,7 @@
                    </hgroup>
                </header>
 
-                <form action="">
+                <form action="mailto:well.bt@hotmail.com" method="post" id="fContato" oninput="calc_total();">
                     
                     <fieldset id="usuario">
                         <legend>Identificação do Usuário</legend>
@@ -51,7 +60,7 @@
                             </p>
                             <p> <label for="cMail">E-mail:</label> <input type="email" name="tMail" id="cMail" size="20" maxlength="40">
                             </p>
-                            <fieldset>
+                            <fieldset id="sexo">
                                 <legend>Sexo:</legend>
                                     <input type="radio" name="tSex" id="cMasc" checked> <label for="cMasc">Masculino</label> <br>
                                     <input type="radio" name="tSex" id="cFem"> <label for="cFem">Feminino</label>
@@ -63,24 +72,52 @@
                         <legend>Endereço do Usuário </legend>
                             <p> <label for="cRua">Logradouro:</label> <input type="text" name="tRua" id="cRua" size="13" maxlength="80" placeholder="Rua, Av, Trav"></p>
                             <p> <label for="cNum">Número:</label> <input type="number" name="tNum" id="cNum" min="0" max="99999"></p>
-                            Estado:
-                            Cidade:
+                            <p><label for="cEst">Estado:</label>
+                            <select name="tEst" id="cEst">
+                                <optgroup label="Regial Sudeste">
+                                    <option value="RJ">Rio de Janeiro</option>
+                                    <option value="SP">São Paulo</option>
+                                    <option value="MG">Minas Gerais</option>
+                                </optgroup>
+
+                                <optgroup label="Região Sul">
+                                    <option value="PR">Paraná</option>
+                                    <option value="SC">Santa Catarina</option>
+                                    <option value="RS">Rio Grande do Sul</option>
+                                </optgroup>
+                            </select></p>
+                            <p><label for="">Cidade:</label>
+                            <input type="text" name="tCid" id="cCid" maxlength="40" size="20" placeholder="Sua Cidade" list="cidades"></p>
+                            <datalist id="cidades">
+                                <option value="Rio de Janeiro"></option>
+                                <option value="Nova Iguaçu"></option>
+                                <option value="Niterói"></option>
+                                <option value="Belford Roxo"></option>
+                            </datalist>
                     </fieldset>
 
                     <fieldset id="mensagem">
                         <legend>Mensagem do Usuário</legend>
-                            Grau de Urgência:
-                            Mensagem:
+                            <p><label for="cUrg">Grau de Urgência:</label>
+                            Mín<input type="range" name="tUrg" id="cUrg" min="0" max="10" step="2">Máx</p>
+                            <p><label for="cMsg">Mensagem:</label>
+                            <textarea name="tMsg" id="cMsg" cols="35" rows="5" placeholder="Deixe aqui sua mensagem"></textarea></p>
                     </fieldset>
 
                     <fieldset id="pedido">
                         <legend>Quero um Google Glass</legend>
-                            Gostaria de adquirir um Google Glass quando disponível
-                            Cor:
-                            Quantidade:
-                            Preço Total: R$
+                            <p> <input type="checkbox" name="tPed" id="cPed" checked><label for="cPed">Gostaria de adquirir um Google Glass quando disponível</label></p>
+                            <p><label for="cCor">Cor:</label>
+                            <input type="color" name="tCor" id="cCor" value="#0000ff"></p>
+                            <p><label for="cQtd">Quantidade:</label>
+                            <input type="number" name="tQtd" id="cQtd" min="0" max="5" value="0"></p>
+                            <p><label for="cTot">Preço Total: R$</label>
+                            <input type="text" name="tTot" id="cTot" placeholder="Total a Pagar" readonly></p>
                     </fieldset>
-                    [BOTÃO ENVIAR]
+
+                    <!-- <input type="submit" value="Enviar"> Botão normal --> 
+                    <input type="image" name="tEnviar" src="_imagens/botao-enviar.png" alt="">
+
                 </form>
             </article>
         </section>
